k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1   # Максимум 1 pod недоступен в момент деплоя
      maxSurge: 1         # Запускаем 1 новый pod перед удалением старого
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      automountServiceAccountToken: false  # отключаем автоматическое монтирование, если не нужно
      containers:
        - name: gateway
          image: ghcr.io/tpabka251/gateway:latest
          ports:
            - containerPort: 8080
          readinessProbe: # Проверяет, готов ли сервис принимать трафик
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe: # Проверяет, жив ли контейнер (если нет — рестарт)
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
              ephemeral-storage: "0Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
